Closed Bug 364024 Opened 19 years ago Closed 18 years ago

When bookmarks backup exists and bookmarks.plist does not, restore from backup instead of using default set

Categories

(Camino Graveyard :: Bookmarks, defect)

PowerPC
macOS
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.6

People

(Reporter: alqahira, Assigned: stuart.morgan+bugzilla)

Details

(Keywords: fixed1.8.1.8)

Attachments

(1 file)

Right now, we restore from bookmarks.plist.bak when the bookmarks.plist is corrupted, and restore fromm the default set in other cases. However, if the user somehow gets to be in a situation where there is no .plist but there is a .plist.bak, we should restore from that instead of the default set.
Assignee: nobody → stuart.morgan
Mass un-setting milestone per 1.6 roadmap. Filter on RemoveRedonkulousBuglist to remove bugspam. Developers: if you have a patch in hand for one of these bugs, you may pull the bug back to 1.6 *at that point*.
Target Milestone: Camino1.6 → ---
Attached patch fixSplinter Review
Does just that, and updates the description of the logic to reflect the current reality.
Attachment #275331 - Flags: review?(murph)
Attachment #275331 - Flags: superreview?(mikepinkerton)
Attachment #275331 - Flags: review?(murph)
Attachment #275331 - Flags: review+
Attachment #275331 - Flags: superreview?(mikepinkerton) → superreview+
Landed on trunk and MOZILLA_1_8_BRANCH.
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1.7
Resolution: --- → FIXED
Target Milestone: --- → Camino1.6
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: