Camino only - Bug 364024: Restore the bookmark backup if the original bookmarks are missing entirely. r=smurph sr=pink